<resources>
    <string name="app_name">Food manager</string>

    <string name="diets_word">Diets</string>
    <string name="diet">Diet</string>


    <string name="cuisines_word">Cuisines</string>
    <string name="cuisine">Cuisine</string>


    <string name="meal_types_word">Meal types</string>
    <string name="meal_type">Meal type</string>

    <string name="health_score">Health rating</string>
    <string name="search_recipes">Search for recipes</string>

    <string name="readyIn">Ready in %1$s minutes</string>
    <string name="servings">%1$s servings</string>
    <string name="serving">%1$s serving</string>
    <string name="ingredients">Ingredients</string>
    <string name="percent_of_daily_needs">Percent of daily needs</string>
    <string name="recipe">Recipe</string>
    <string name="steps">Steps</string>
    <string name="no_data">No data</string>
    <string name="new_recipe">New Recipe</string>
    <string name="recipe_name">Name of recipe</string>
    <string name="attributes">Attributes</string>
    <string name="number_of_servings">Number of servings</string>
    <string name="serving_word">Servings</string>
    <string name="prepare_time">Prepare time (minutes)</string>
    <string name="picture">Picture</string>
    <string name="add_details">Add details</string>
    <string name="new_ingredient">New ingredient</string>
    <string name="new_step">New step</string>
    <string name="new_nutrition">New nutrition</string>
    <string name="add_recipe">Add recipe</string>

    <string name="ingredient_name">Ingredient name</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="add">Add</string>

    <string name="gluten">Gluten Free</string>
    <string name="keto">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Very Healthy</string>

    <string name="see_ingredients">See ingredients</string>

    <string name="search_for_recipes">Search for recipes</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="dish_placeholder">Dish placeholder</string>
    <string name="search_in">Search in</string>
    <string name="community_db">Community database</string>
    <string name="spoonacular_db">Spoonacular database</string>
    <string name="your_favourites">Your favourites</string>
    <string name="weekly_diet_plan">Weekly diet plan</string>
    <string name="_00_00_0000">00–00–0000</string>
    <string name="desc">desc</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="calories">Calories</string>
</resources>