<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="sans-serif-smallcaps"
            android:textAlignment="center"
            android:textColor="@color/item_title"
            android:textSize="45sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/dish_placeholder"
            app:srcCompat="@drawable/dish_placeholder" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/weekly_diet_plan"
            android:textColor="@color/item_content" />

        <Button
            android:id="@+id/buttonNewRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/add_new_recipe"
            android:textColor="@color/item_content" />

        <com.skydoves.transformationlayout.TransformationLayout
            android:id="@+id/transformationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:transformation_duration="550"
            app:transformation_targetView="@+id/searchForCard">

            <Button
                android:id="@+id/buttonSearchForRecipes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/search_for_recipes"
                android:textColor="@color/item_content" />
        </com.skydoves.transformationlayout.TransformationLayout>

        <include
            android:id="@+id/searchForCard"
            layout="@layout/choose_browse_mode_card" />

    </LinearLayout>
</ScrollView>