<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    android:background="@drawable/rounded_corners">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        tools:text="Poniedziałek"
        android:textColor="@color/item_content"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/carbs"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toEndOf="@id/fat"
        android:max="100"
        android:minWidth="80dp"
        android:minHeight="30dp"
        android:progress="50"
        android:progressTint="#332D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/carbsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carbs"
        android:textColor="@color/item_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/carbs"
        app:layout_constraintStart_toStartOf="@+id/carbs"
        app:layout_constraintTop_toBottomOf="@+id/carbs">

    </TextView>

    <ProgressBar
        android:id="@+id/fat"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/calories"
        android:max="100"
        android:minWidth="80dp"
        android:minHeight="30dp"
        android:progress="50"
        android:progressTint="#EAB109"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/protein"
        app:layout_constraintStart_toEndOf="@+id/carbs"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fat"
        android:textColor="@color/item_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fat"
        app:layout_constraintStart_toStartOf="@+id/fat"
        app:layout_constraintTop_toBottomOf="@+id/fat">

    </TextView>

    <ProgressBar
        android:id="@+id/protein"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/name"
        android:indeterminate="false"
        android:max="100"
        android:minWidth="80dp"
        android:minHeight="30dp"
        android:progress="50"
        android:progressTint="#958143"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calories"
        app:layout_constraintStart_toEndOf="@+id/fat"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ProteinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protein"
        android:textColor="@color/item_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/protein"
        app:layout_constraintStart_toStartOf="@+id/protein"
        app:layout_constraintTop_toBottomOf="@+id/protein">

    </TextView>

    <ProgressBar
        android:id="@+id/calories"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/protein"
        android:max="100"
        android:minWidth="80dp"
        android:minHeight="30dp"
        android:progress="50"
        android:progressTint="#881616"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/protein"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/CaloriesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        android:textColor="@color/item_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/calories"
        app:layout_constraintStart_toStartOf="@+id/calories"
        app:layout_constraintTop_toBottomOf="@+id/calories">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>