<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipeItemLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@drawable/rounded_corners"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textRecipeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/item_title"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Przepis na nalesniki" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitStart">


        <ImageView
            android:id="@+id/imageViewRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/dish_placeholder" />


        <LinearLayout
            android:id="@+id/attributesLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:adjustViewBounds="true"
                android:visibility="gone"
                app:srcCompat="@drawable/gluten_icon"
                tools:visibility="visible" />
        </LinearLayout>

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/infoLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/readyIn"
                android:textAlignment="textEnd"
                android:textColor="@color/item_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewServings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/servings"
                android:textAlignment="textEnd"
                android:textColor="@color/item_content"
                android:textSize="16sp" />

            <include
                android:id="@+id/ratingBarDesc"
                layout="@layout/item_content_title" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:isIndicator="true"
                android:max="5"
                android:numStars="5"
                android:progressTint="@color/gold"
                android:rating="5"
                android:stepSize="0.1" />

            <include
                android:id="@+id/progressBarDesc"
                layout="@layout/item_content_title" />

            <LinearLayout
                android:id="@+id/progressBarsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.skydoves.transformationlayout.TransformationLayout
        android:id="@+id/transformationLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        app:transformation_duration="550"
        app:transformation_fitMode="auto">

        <Button
            android:id="@+id/buttonRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/recipe" />
    </com.skydoves.transformationlayout.TransformationLayout>


</LinearLayout>
